[package]
name = "HelloWorld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
eventuals = "0.6.6"
clap = { version = "3.1.2", features = ["derive"] }